# trans-region-system

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
src/: app.py
src/authorization/: jwt.py  jwt_handler.py
src/exceptions/: authentication.py  city.py  project.py  user.py
src/models/: __init__.py  base.py  city.py  image_project.py  project.py  user.py
src/pipelines/: city.py  project.py  user.py
src/schemas/: base_response.py  city.py  filter.py  image_project.py  project.py  user.py
src/settings/: __init__.py  authorization_settings.py  image_settings.py  postgres_settings.py
src/utils/: logger.py
src/views/: city.py  project.py  user.py  view.py
