[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["NeverEverLive <nevereverlives@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
loguru = "^0.6.0"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
pydantic = {extras = ["email"], version = "^1.10.7"}
bcrypt = "^4.0.1"
stringcase = "^1.2.0"
pyjwt = "^2.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
